Android: fix log output pattern

Remove hardcoded android log pattern as this is already part of the message to
match behavior on other platforms.

Task-number: QTBUG-69450
Change-Id: I529b550114a2164beafe305f8392891c4ead88f0
Reviewed-by: Kai Koehne <kai.koehne@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>